# cautious-octo-spoon

./: .gitignore  Filmes.py  board_diary.MD  main.py  pyproject.toml
models/: movies.py  search.py
utils/: args.py  cli.py  validate_data.py
